# causal-llm-evaluator

./: .env.example  Dockerfile  README.md  experiments.db  experiments.jsonl  pyproject.toml  requirements.txt
app/: causal.py  experiment.py  main.py  providers.py  schemas.py  scoring.py  store.py
demo/: creator_experiment.json
frontend/: dashboard.py
